hateoas añadido y swagger