@@ -1,6 +1,7 @@
 package com.ventas.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -12,40 +13,32 @@ import com.ventas.Repository.VentaRepository;
 
 @Service
 public class VentaService {
-     @Autowired
+
+    @Autowired
     private VentaRepository ventaRepository;
 
     public List<VentaDTO> getAllVentas() {
         List<Venta> ventas = ventaRepository.findAll();
         return ventas.stream()
-            .map(VentaMapper::toDTO)
-                .toList();
+                .map(VentaMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
-    public VentaDTO getVentaById(Integer id) {
-        Venta venta = ventaRepository.findById(id).orElse(null);
-        return VentaMapper.toDTO(venta);
+    public Venta getVentaById(Integer id) {
+        return ventaRepository.findById(id).orElse(null);
     }
 
-    public VentaDTO createVenta(VentaDTO ventaDTO) {
-        Venta venta = VentaMapper.toEntity(ventaDTO);
-        Venta creada = ventaRepository.save(venta);
-        return VentaMapper.toDTO(creada);
+    public Venta createVenta(Venta venta) {
+        return ventaRepository.save(venta);
     }
 
-    public VentaDTO updateVenta(Integer id, VentaDTO ventaDTO) {
-        Venta existente = ventaRepository.findById(id).orElse(null);
-
-        if (existente != null) {
-            existente.setIdCliente(ventaDTO.getIdCliente());
-            existente.setIdVendedor(ventaDTO.getIdVendedor());
-            existente.setFechaVenta(ventaDTO.getFechaVenta());
-
-            Venta actualizada = ventaRepository.save(existente);
-            return VentaMapper.toDTO(actualizada);
-        }
-
-        return null;
+    public Venta updateVenta(Integer id, Venta ventaData) {
+        return ventaRepository.findById(id).map(existente -> {
+            existente.setIdCliente(ventaData.getIdCliente());
+            existente.setIdVendedor(ventaData.getIdVendedor());
+            existente.setFechaVenta(ventaData.getFechaVenta());
+            return ventaRepository.save(existente);
+        }).orElse(null);
     }
 
     public boolean deleteVenta(Integer id) {
